[package]
name = "blog_os"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = { version = "0.9.20", features = ["map_physical_memory"]}
volatile = "0.2.6" # used for memory-map access
spin = "0.5.2"     # spinning mutex lock
x86_64 = "0.14.2"  # invoking assembly instructions
uart_16550 = "0.2.0" # Universal asynchronous receiver-transmitter
pic8259 = "0.10.1" # Progrmmable Interrupt Controller
pc-keyboard = "0.5.0"
linked_list_allocator = "0.9.0" # 先使用一个定义好的内存分配器

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies.futures-util]
version = "0.3.4"
default-features = false
features = ["alloc"]

[dependencies.crossbeam-queue]
version = "0.2.1"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.2.0"
default-features = false

[profile.dev]
#panic = "abort"

[profile.release]
panic = "abort"

# Pass arguments to QEMU to exit guest system when finished test
[package.metadata.bootimage]
# run-args = ["-s", "-S"]  # may be used for debug
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"] # isa-debug-exit is device which could cause to quite QEMU from the guest system by receiving data from I/O port.
test-success-exit-code = 33         # (0x10 << 1) | 1

[[test]]
name = "should_panic"
harness = false # 不使用测试框架

[[test]]
name = "stack_overflow"
harness = false